--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -20,6 +20,16 @@
                 android:prompt="@string/state1"
                 android:entries="@array/state_array"
                 android:layout_margin="10dp"></Spinner>
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Name"/>
+
+            </android.support.design.widget.TextInputLayout>
             <Spinner
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
