--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -14,16 +14,16 @@
         android:layout_alignParentTop="true" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
         android:layout_width="wrap_content"
+        android:layerType="software"
         android:layout_height="wrap_content"
+        android:id="@+id/fab"
+        android:background="@mipmap/fab"
+        android:src="@drawable/plus"
+        android:layout_marginBottom="55dp"
+        android:layout_marginEnd="0dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_gravity="bottom|end"
-        android:layout_marginBottom="31dp"
-        android:layout_marginEnd="39dp"
-        android:backgroundTint="#fff"
-        android:src="@drawable/add" />
+        android:layout_alignParentEnd="true"/>
 
 
 </RelativeLayout>
