--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -4,10 +4,24 @@
     android:layout_height="match_parent"
     tools:context="com.hackathon.cyberblue.crimemapping.MapFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layerType="software"
+        android:layout_height="wrap_content"
+        android:id="@+id/fab"
+        android:background="@mipmap/fab"
+        android:src="@drawable/add"
+        android:layout_marginBottom="55dp"
+        android:layout_marginEnd="0dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"/>
 
 </FrameLayout>
