--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,21 +3,21 @@
 
     <item
         android:id="@+id/navigation_crimemap"
-        android:icon="@drawable/fingerprint"
+        android:icon="@mipmap/crime"
         android:title="@string/title_crime" />
 
     <item
         android:id="@+id/navigation_safemap"
-        android:icon="@drawable/map"
+        android:icon="@mipmap/safearea"
         android:title="@string/title_safe" />
 
     <item
         android:id="@+id/navigation_contacts"
-        android:icon="@drawable/icon"
+        android:icon="@mipmap/contacts"
         android:title="@string/title_contacts" />
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/users"
+        android:icon="@mipmap/profile"
         android:title="@string/title_profile" />
 
 </menu>
