--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -5,7 +5,7 @@
     tools:context="com.hackathon.cyberblue.crimemapping.MapFragment">
 
     <fragment
-        android:id="@+id/map"
+        android:id="@+id/map1"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,9 +14,8 @@
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
-        android:layerType="software"
         android:layout_height="wrap_content"
-        android:id="@+id/fab"
+        android:id="@+id/fab1"
         android:background="@mipmap/fab"
         android:src="@drawable/add"
         android:layout_marginBottom="55dp"
